--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -21,14 +21,23 @@
     }
 }
 
+@media (max-width: 800px) {
+    .footer {
+        .wrapper {
+            justify-content: space-between;
+        }
+        &__socialNav {
+            display: none;
+        }
+    }    
+}
+
+
 @media (max-width: 600px) {
     .footer {
         text-align: center;
         .wrapper {
             width: 100%;
-        }
-        &__socialNav {
-            display: none;
         }
         &__cred {
             display: none;
