--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -28,7 +28,7 @@
         background: white;
         }  
     }
-    &__tool {
+    &__tool {   
         text-align: center;
         font-size: 8rem;
         margin-bottom: 50px;
@@ -54,9 +54,18 @@
 @media(max-width: 800px) {
     .toolbox {
         flex-direction: column;
+        .wrapper {
+            width: 100%;
+        }
         &__shelf {
             flex-direction: row;
             justify-content: space-around;
+        }
+        &__tool {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     }
 }
